# topological-portfolio-analysis

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
data/: sample_prices.csv
notebooks/: prototyping.ipynb
scripts/: compare_risk_vs_vol.py  fetch_sp500.py  make_sample_data.py
src/toporisk/: __init__.py  cli.py  data.py  embedding.py  landscape.py  portfolio.py  risk.py  topology.py  viz.py
tests/: conftest.py  test_data.py  test_embedding.py  test_landscape.py  test_portfolio.py  test_risk.py  test_topology.py
