[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toporisk"
version = "0.1.0"
description = "Topological risk portfolios: per-asset Takens embedding, H0 persistence landscapes, and a topological-risk quadratic program (Goel-Sharma-Kanniainen, 2026)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jaan" }]
keywords = ["topological-data-analysis", "persistent-homology", "portfolio-optimization", "takens-embedding"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "gudhi>=3.9",
]

[project.optional-dependencies]
# QP solver for the portfolio step. scipy (already a core dep) also works via
# SLSQP; cvxpy is the cleaner convex-QP route and is needed if you later add the
# TDA-IPO cardinality constraint (a mixed-integer QP).
qp = ["cvxpy>=1.4"]
data = ["yfinance>=0.2"]
dev = ["pytest>=7.4", "mypy>=1.5", "ruff>=0.1"]

[project.scripts]
toporisk = "toporisk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
